NEWS for the QuakeForge project
-------------------------------

Changes from 0.5.4
    o more cvar renaming: scr_consize -> con_size, scr_conspeed -> con_speed,
      gl_conalpha -> con_alpha, vid_conwidth -> con_width,
      vid_conheight -> con_height
    o demo_speed no longer affects console scrolling or cursor blink rate
    o save game loading fixed
    o FPS display now updated every 0.2 seconds and displays to the tenth of
      an fps

Changes from 0.5.3
    o CRITICAL: exploitable buffer overflow in qw-server fixed
    o more gib regex and other text manipuation support
    o snd_oss_rw ditched in favour of just trying both ways

Changes from 0.5.2

    o General enhancements.
        * MVD playback in the qw clients.
        * MVD recording in the qw server.
        * sv_maxrate changes now take effect immediately rather than when
          clients (re)connect or change their rate
        * segfault when using "snd_output null" fixed
        * qw server "status" command now gives the server's uptime
        * "map" will display the amount of time the current map has been active
        * nq-server will now auto-load the start map if none is specified
        * streaming for large sound files
        * support for two channel sound files

    o qfcc enhancements.
        * @argc and @argv deprecated in favor of @args.count and @args.list
          (@args is a struct with type @va_list)
        * structure copy
        * -L lib search paths and -l now behaves in a more expected manner
        * default search paths for includes and libs

    o Progs engine enhancements.
        * arbitrary size data copying

Changes from 0.3.0

    o General enhancements.
        * NQ (quake1, single player, NetQuake, WinQuake) is back.
        * Video (driver and renderer), audio, gamecode (progs), console,
          model loading and general utility code shared in common libs between
          NQ and QW
        * Plugin system for sound and cd drivers.